[gd_scene load_steps=3 format=3 uid="uid://bwsftfna5831c"]

[ext_resource type="Script" path="res://src/content_menu.gd" id="1_k6goi"]
[ext_resource type="SystemFont" uid="uid://be14qyvbd8lox" path="res://assets/fonts/system_font.tres" id="2_tim36"]

[node name="ContentMenu" type="PanelContainer"]
script = ExtResource("1_k6goi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_tim36")
text = "NO PACKS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_tim36")
text = "Back"
